@@ -285,6 +285,7 @@ IceInternal::OutgoingConnectionFactory::create(const vector<EndpointPtr>& endpts
 		assert(transceiver);
 	    }	    
 	    connection = new ConnectionI(_instance, transceiver, endpoint, 0);
+    cout << "yyy " << IceUtil::ThreadControl().id() << endl;
 	    connection->validate();
 
 	    if(_instance->defaultsAndOverrides()->overrideCompress)
